--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/AlexLiber/projekt_7_3/issues"
   },
-  "homepage": "https://github.com/AlexLiber/projekt_7_3#readme"
+  "homepage": "https://github.com/AlexLiber/projekt_7_3#readme",
+  "devDependencies": {
+    "autoprefixer-cli": "^1.0.0",
+    "browser-sync": "^2.23.6",
+    "nu-html-checker": "^0.1.0"
+  }
 }
