--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
   "description": "https://alexliber.github.io/projekt_7_4/",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:*",
+    "test:html": "globstar nu-html-checker *.html",
+
+    "watch": "npm run watch:*",
+    "watch:browsersync": "npm run browser-sync",
+    "watch:sassprefixer": "onchange css/style.css node-sass watch:sass watch:autoprefixer",
+    "watch:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css",
+
+    "build": "npm run build:*",
+    "build:clean": "npm run rimraf css",
+    "build:sass": "node-sass --output-style compact -o css sass"
   },
   "repository": {
     "type": "git",
@@ -20,6 +31,10 @@
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.23.6",
-    "nu-html-checker": "^0.1.0"
-  }
+    "nu-html-checker": "^0.1.0",
+    "rimraf": "^2.6.2",
+    "onchange": "^3.3.0",
+    "node-sass": "^4.8.3"
+  },
+  "dependencies": {}
 }
